safari fix (added height to text-filter-container to prevent total column collapse)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -315,13 +315,11 @@ h1 {
 .project-card-img,
 .project-card-text {
     position: relative;
-    /* height: 40rem; */
     margin-top: 2rem;
     margin-bottom: 2rem;
     border-radius: 10px;
     opacity: 1;
     -webkit-opacity: 1;
-    /* transition-duration: .5s; */
     box-shadow: 4px 4px 2px rgba(0, 0, 0, .35),
                 inset 2px 2px 4px rgba(51, 51, 51, 0.493),
                 inset -2px -2px 4px rgba(51, 51, 51, 0.493),
@@ -335,7 +333,6 @@ h1 {
 }
 
 .project-card-text {
-    /* min-height: 20rem; */
     text-shadow: 0px 0px 2;
     color: #333;
     background-color: #dad6d6c9;
@@ -390,6 +387,11 @@ h1 {
     opacity: 1;
     -webkit-opacity: 1;
 }
+
+.text-filter-container {
+    height:40rem;
+}
+
 .opacityFalse {
     opacity: 0;
     -webkit-opacity: 0;
